apps/anaconda/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anaconda
  labels:
    app.kubernetes.io/part-of: anaconda
